# bansu

./: .gitignore  API_DOCUMENTATION.md  Cargo.toml  README.md  design_of_statistics.md  update_apidoc.sh
autogenerate_documentation/: package.json  run-openapi-to-markdown.js
db_schema/: generate_usage_statistics_code.sh  init_statistics_db.sql
db_schema/migrations/: Cargo.toml
db_schema/migrations/src/: lib.rs  m20260206_000001_create_table.rs
docker/: FedoraDockerfile  setup_bansu_fedora_image.sh
docker/wrappers/: ccp4-python  servalcat
docs/: redoc-static.html
node_tests/: localhost_test.mjs  package.json  test_acedrg_job.mjs
openapi/: bansu.json  bansu.yaml
src/: docker.rs  job.rs  main.rs  messages.rs  state.rs  usage_statistics.rs  utils.rs  ws_connection.rs
src/job/: docker.rs  job_handle.rs  job_runner.rs  job_type.rs
src/job/job_type/: acedrg.rs  atman.rs  chemdrasil.rs  servalcat.rs
src/usage_statistics_entity/: jobs.rs  mod.rs  prelude.rs  requests.rs
