[package]
name = "bansu"
version = "0.3.0-alpha"
authors = ["Jakub Smulski <hgonomeg@gmail.com>"]
edition = "2021"
license = "GNU GPLv3"

[dependencies]
actix = "0.13"
actix-governor = "0.6"
actix-rt = "2"
actix-web = "4"
actix-ws = "0.3"
anyhow = "1"
bollard = { version = "0.17", features = ["tokio-stream"] }
# bytes = "1"
futures-util = "0.3"
log = "0.4"
# lazy_static = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
simple_logger = { version = "5", features = ["stderr"] }
thiserror = "1"
# tempfile = "3.10.1"
tokio = { version = "1", features = ["fs", "io-util", "libc", "net", "time", "process", "signal", "rt-multi-thread", "sync", "macros"] }
tokio-stream = { version = "0.1", features = ["time", "fs", "io-util", "net", "signal", "sync"] }
utoipa = { version = "5", features = ["actix_extras", "yaml"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
