[package]
name = "bansu"
version = "0.3.0-alpha"
authors = ["Jakub Smulski <hgonomeg@gmail.com>"]
edition = "2024"
license = "GNU GPLv3"

[features]
default = ["utoipa"]
utoipa = ["dep:utoipa"]

[dependencies]
actix = "0.13"
actix-governor = "0.6"
actix-rt = "2"
actix-web = "4"
actix-ws = "0.3"
anyhow = "1"
bollard = { version = "0.17", features = ["tokio-stream"] }
# bytes = "1"
futures-util = "0.3"
log = "0.4"
# lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = { version = "5", features = ["stderr"] }
thiserror = "1"
# tempfile = "3.10.1"
tokio = { version = "1", features = ["fs", "io-util", "libc", "net", "time", "process", "signal", "rt-multi-thread", "sync", "macros"] }
tokio-stream = { version = "0.1", features = ["time", "fs", "io-util", "net", "signal", "sync"] }
utoipa = { version = "5", features = ["actix_extras", "yaml"] , optional = true }
# I prefer to serve raw .json and .yaml
# and not include the whole UI in my app, as it explodes the executable size
# utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
# We are not using that. Adds complexity.
# utoipa-actix-web = "0.1"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
